Greasepencil-object branch crashes on selecting bone in edit mode. #51923

Closed
opened 2017-06-28 15:39:21 +02:00 by Thomas Downs · 11 comments

06/28/2017
System Information
Arch Linux
Nvidia 750ti

Blender Version
Broken: greasepencil-object branch b0b0e3872ec289f61349471f66a71146b13aa2d5

     commit: b8df9f653178f356565d5beb8d7a979b2405420d
     been broken for me all the commits for a week or so

Worked: about a couple weeks ago on the greasepencil-object branch, the blender2.8 branch works fine

Short description of error
Blender crashes when selecting a bone in edit mode.

Exact steps for others to reproduce the error
Start with default blend, add an armature, tab into edit mode, and then select a bone.

06/28/2017 **System Information** Arch Linux Nvidia 750ti **Blender Version** Broken: greasepencil-object branch b0b0e3872ec289f61349471f66a71146b13aa2d5 ``` commit: b8df9f653178f356565d5beb8d7a979b2405420d been broken for me all the commits for a week or so ``` Worked: about a couple weeks ago on the greasepencil-object branch, the blender2.8 branch works fine **Short description of error** Blender crashes when selecting a bone in edit mode. **Exact steps for others to reproduce the error** Start with default blend, add an armature, tab into edit mode, and then select a bone.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tnelsond

Added subscriber: @tnelsond
Antonio Vazquez self-assigned this 2017-06-28 15:51:03 +02:00

Added subscribers: @fclem, @dfelinto

Added subscribers: @fclem, @dfelinto

It looks the problem is on DRW_framebuffer_init() in GPENCIL_engine_init() https://developer.blender.org/diffusion/B/browse/greasepencil-object/source/blender/draw/engines/gpencil/gpencil_engine.c;b8df9f653178f356565d5beb8d7a979b2405420d$62

The debug shows that all works perfect except if you create an armature, enter in edit mode and select the bone.

One weird thing is the DRW_viewport_size_get() returns 24 x 24 when it was returning the right value before select the bone.

@fclem @dfelinto Do you think this can be related to draw armature engine?

It looks the problem is on DRW_framebuffer_init() in GPENCIL_engine_init() https://developer.blender.org/diffusion/B/browse/greasepencil-object/source/blender/draw/engines/gpencil/gpencil_engine.c;b8df9f653178f356565d5beb8d7a979b2405420d$62 The debug shows that all works perfect except if you create an armature, enter in edit mode and select the bone. One weird thing is the DRW_viewport_size_get() returns 24 x 24 when it was returning the right value before select the bone. @fclem @dfelinto Do you think this can be related to draw armature engine?

Added subscriber: @ideasman42

Added subscriber: @ideasman42

It's related to the selection loop that set the viewport to 24px².
Maybe @ideasman42 could help you on this.

It's related to the selection loop that set the viewport to 24px². Maybe @ideasman42 could help you on this.
Antonio Vazquez removed their assignment 2017-09-19 16:48:05 +02:00
Campbell Barton was assigned by Antonio Vazquez 2017-09-19 16:48:05 +02:00

Added subscriber: @antoniov

Added subscriber: @antoniov

Campbell, do you have any update about this?

Campbell, do you have any update about this?

Other engines check DRW_state_is_fbo() before initializing FBO's.

However I'm not sure if it makes sense to support this case,
In the short term it's simplest not to use grease pencil engine when DRW_state_is_select is set.

Longer term we may want to support GL selection here - we may want solid filled grease pencil to be selectable, or just prevent things behind them from becoming selected.

Other engines check `DRW_state_is_fbo()` before initializing FBO's. However I'm not sure if it makes sense to support this case, In the short term it's simplest not to use grease pencil engine when `DRW_state_is_select` is set. Longer term we may want to support GL selection here - we may want solid filled grease pencil to be selectable, or just prevent things behind them from becoming selected.
Campbell Barton was unassigned by Antonio Vazquez 2017-09-20 10:25:30 +02:00
Antonio Vazquez self-assigned this 2017-09-20 10:25:30 +02:00

@ideasman42 Thanks for the DRW_state_is_fbo() trick.

I have added this check and the problem is solved, but as you said, in the long term to have the option to select a GP object selecting the strokes would be great.

@ideasman42 Thanks for the DRW_state_is_fbo() trick. I have added this check and the problem is solved, but as you said, in the long term to have the option to select a GP object selecting the strokes would be great.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51923
No description provided.