Fi T51923: Crashes on selecting bone in edit mode

Need to verify FBO state before initialize framebuffer